--- a/.github/workflows/build_book.yml
+++ b/.github/workflows/build_book.yml
@@ -37,10 +37,10 @@ jobs:
 
     #  - uses: r-lib/actions/setup-r-dependencies@v2
 
-      - name: Render book to all format
+      - name: Render book with Quarto
         # Add any command line argument needed
         run: |
-          quarto render
+          quarto render _book/index.qmd --to html --output-dir _book
 
       # - name: Deploy to Netlify
       #   #if: contains(env.isExtPR, 'false')
