--- a/.github/workflows/build_book.yml
+++ b/.github/workflows/build_book.yml
@@ -42,19 +42,19 @@ jobs:
         run: |
           quarto render --to html
 
-      # - name: Deploy to Netlify
-      #   #if: contains(env.isExtPR, 'false')
-      #   id: netlify-deploy
-      #   uses: nwtgck/actions-netlify@v1.1
-      #   with:
-      #     publish-dir: './_book'
-      #     production-branch: main
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
-      #     deploy-message:
-      #       'Deploy from GHA: ${{ github.event.pull_request.title || github.event.head_commit.message }} (${{ github.sha }})'
-      #     enable-pull-request-comment: false
-      #     enable-commit-comment: false
-      #   env:
-      #     NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-      #     NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID_2E }}
-      #   timeout-minutes: 1
+      - name: Deploy to Netlify
+        #if: contains(env.isExtPR, 'false')
+        id: netlify-deploy
+        uses: nwtgck/actions-netlify@v1.1
+        with:
+          publish-dir: './_book'
+          production-branch: main
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          deploy-message:
+            'Deploy from GHA: ${{ github.event.pull_request.title || github.event.head_commit.message }} (${{ github.sha }})'
+          enable-pull-request-comment: false
+          enable-commit-comment: false
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID_2E }}
+        timeout-minutes: 1
