--- a/.github/workflows/build_book.yml
+++ b/.github/workflows/build_book.yml
@@ -5,6 +5,7 @@ on:
     branches: main
   # to be able to trigger a manual build
   workflow_dispatch:
+  schedule:
     # run every day at 11 PM
     - cron: '0 7 * * *'
 
